[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "schmidpl_diffusion2d"
version = "0.0.6"
authors = [
    {name = "Paul Schmidt", email = "st191430@stud.uni-stuttgart.de"},
]
description = "Cool description"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5"
]

[project.scripts]
diffusion2d-cli = "diffusion2d.diffusion2d:solve"

[project.entry-points."diffusion2d.examples"]
example = "diffusion2d.diffusion2d:solve"